[package]
name = "rustarena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
log = "0.4.19"
env_logger = "0.10.0"
reqwest = { version = "0.11.18", features = ["json"]}
git2 = "0.17.2"
headless_chrome = "1.0.5"
scraper = "0.16.0"
url = "2.4.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0.97"
walkdir = "2.3.3"
markdown = "0.3.0"
tokio = { version = "1.28.2", features = ["full"] }
graphql_client = "0.13.0"
futures = "0.3.28"
ethers-solc = "2.0.7"